# loudness_validator

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.md  Dockerfile.worker  INSTALL.md  Jamroot  README.md  SConstruct  USAGE.md  build_linux.sh  build_windows.bat  project-config.jam
PLoudValidator/: Jamroot  buildPLoudValidator_linux.sh  buildPLoudValidator_windows.bat  project-config.jam
PLoudValidator/src/: AudioFile.cpp  AudioFile.h  HelpDialog.cpp  LoudnessHistory.h  LoudnessMeter.cpp  LoudnessMeter.h  PLoudGui.cpp  PLoudGui.h  PLoudProcess.cpp  PLoudProcess.hpp  Properties.cpp  Properties.h  QtVectorHistogram.cpp  QtVectorHistogram.h  QtVectorViewer.cpp  SoundFile.cpp  SoundFile.h  application.qrc  main.cpp  style.css
PLoudValidator/src/icons/: .directory
app/: SConscript
app/AdmLoudnessAnalyser/: AdmLoudnessAnalyser.cpp  AdmLoudnessAnalyser.hpp  main.cpp
app/LoudnessValidator/: AudioFile.cpp  AudioFile.h  DropAudio.cpp  DropAudio.h  HelpDialog.cpp  HelpDialog.h  LoudnessHistory.cpp  LoudnessHistory.h  LoudnessMeter.cpp  LoudnessMeter.h  PLoudGui.cpp  PLoudGui.h  PLoudProcess.cpp  PLoudProcess.hpp  Properties.cpp  Properties.h  QtVectorHistogram.cpp  QtVectorViewer.cpp  main.cpp
app/PLoudValidator/src/: HelpDialog.cpp  HelpDialog.h  LoudnessHistory.cpp  LoudnessMeter.h  PLoudGui.cpp  PLoudGui.h  PLoudProcess.hpp  Properties.cpp  QtVectorViewer.h  application.qrc  src.pro
app/analyser/: analyser.cpp  main.cpp
app/completeAnalyser/: completeAnalyser.cpp
app/corrector/: corrector.cpp  main.cpp
app/mediaAnalyser/: AvCorrector.cpp  AvCorrector.hpp  AvSoudFile.cpp  AvSoudFile.hpp  AvSoundFile.cpp  AvSoundFile.hpp  main.cpp  mediaAnalyser.cpp
cmake/: FindADMEngine.cmake  FindAvTranscoder.cmake  FindFFmpeg.cmake  FindSndFile.cmake  LoudnessValidatorMacros.cmake
loudnessLibrary/: Jamroot  projet-config.jam
loudnessLibrary/include/: loudnessLibrary.h
loudnessLibrary/src/: filter.cpp  histogram.cpp  histogram.h  loudness.cpp  loudness.h  loudnessFilter.cpp  loudnessFilter.h  loudnessHistogram.cpp  loudnessHistogram.h  loudnessLibrary.cpp  loudnessLoudness.cpp  loudnessLoudness.h  loudnessProcess.cpp  loudnessProcess.h  loudnessTruePeakMeter.cpp  loudnessTruePeakMeter.h  process.cpp  process.h  truePeakMeter.cpp  truePeakMeter.h
loudnessLibrary/tool/: Jamfile.v2
loudnessLibrary/tool/analyser/: main.cpp
loudnessLibrary/tool/common/: CorrectBuffer.h  Jamfile.v2  LookAheadLimiter.cpp  LookAheadLimiter.h  ProcessFile.h  RollingMax.hpp  RollingMax.tcc  WriteCorrectedFile.h  WriteXml.cpp  WriteXml.h  rolling_max.hpp
loudnessLibrary/tool/corrector/: main.cpp
rlm/: Jamroot
src/: SConscript  loudnessAnalyser.i
src/admLoudnessAnalyser/: AdmLoudnessAnalyser.cpp  AdmLoudnessAnalyser.hpp  SConscript
src/loudnessAnalyser/: Filter.cpp  Filter.hpp  Histogram.cpp  Histogram.hpp  Loudness.cpp  Loudness.hpp  LoudnessAnalyser.cpp  LoudnessAnalyser.hpp  Process.cpp  Process.hpp  SConscript  TruePeakMeter.cpp  TruePeakMeter.hpp  common.hpp  filter.cpp  filter.h  filter.hpp  histogram.cpp  loudness.cpp  loudness.hpp  loudnessLibrary.cpp  loudnessLibrary.hpp  process.cpp  process.hpp  truePeakMeter.cpp  truePeakMeter.hpp
src/loudnessAnalyser/utils/: HardwareDetection.cpp  HardwareDetection.hpp
src/loudnessCommon/: HardwareDetection.hpp  common.hpp  system.hpp
src/loudnessCorrector/: CorrectBuffer.hpp  LookAheadLimiter.cpp  LookAheadLimiter.hpp  PeakLimiter.cpp  PeakLimiter.hpp  ProcessFile.hpp  RollingMax.hpp  SConscript
src/loudnessCorrectors/: CorrectBuffer.hpp  LookAheadLimiter.hpp  RollingMax.hpp
src/loudnessIO/: ProcessFile.hpp  SConscript  SoundFile.cpp  SoundFile.hpp
src/loudnessTools/: ProcessFile.hpp  SConscript  WriteXml.cpp  WriteXml.hpp
src/loudnessTools/io/: SoundFile.cpp  SoundFile.hpp
src/tool/analyser/: main.cpp
src/tool/common/: CorrectBuffer.hpp  LookAheadLimiter.cpp  LookAheadLimiter.hpp  ProcessFile.h  ProcessFile.hpp  RollingMax.hpp  WriteCorrectedFile.hpp  WriteXml.cpp  WriteXml.hpp
src/tool/corrector/: main.cpp
src/tool/io/: SoundFile.cpp  SoundFile.hpp
src/tool/processors/: analyserProcessor.hpp  writeCorrectedFile.hpp
src/tool/xml/: WriteXml.cpp  WriteXml.hpp
test/: SConscript  loudness-analyser.cpp  test.cpp
tools/format/: format_all_files.sh
tools/travis/: gcc.generate.coverage.sh  install_dependencies.sh  install_ressources.sh  launch_tests.sh  test_mediaAnalyser.sh
worker/: SConscript
worker/AdmLoudnessWorker/: WORKER.md  worker.cpp  worker.hpp
